--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
     "expo-web-browser": "~15.0.10",
     "lucide-react-native": "^0.563.0",
     "moti": "^0.30.0",
-    "nativewind": "^4.2.1",
+    "nativewind": "^2.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -39,13 +39,14 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "tslib": "^2.6.2",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "tailwindcss": "^3.4.19",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.9.2"
   },
   "private": true
